<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.3.5</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.hieptran</groupId>
	<artifactId>smarthome-server</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>smarthome-server</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
<!--		<dependency>-->
<!--			<groupId>org.springframework.boot</groupId>-->
<!--			<artifactId>spring-boot-starter-data-jpa</artifactId>-->
<!--		</dependency>-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-mongodb</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.hivemq</groupId>
			<artifactId>hivemq-mqtt-client</artifactId>
			<version>1.3.3</version>
		</dependency>

<!--		Security-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
		</dependency>

<!--		Socket.io-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-websocket</artifactId>
		</dependency>
<!--		<dependency>-->
<!--			<groupId>com.corundumstudio.socketio</groupId>-->
<!--			<artifactId>netty-socketio</artifactId>-->
<!--			<version>2.0.12</version>-->
<!--		</dependency>-->

		<dependency>
			<groupId>io.socket</groupId>
			<artifactId>socket.io-server</artifactId>
			<version>4.1.2</version>
		</dependency>

<!--		<dependency>-->
<!--			<groupId>org.eclipse.jetty</groupId>-->
<!--			<artifactId>jetty-server</artifactId>-->
<!--			<version>12.0.15</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>org.eclipse.jetty.websocket</groupId>-->
<!--			<artifactId>websocket-server</artifactId>-->
<!--			<version>9.4.56.v20240826</version>-->
<!--		</dependency>-->

<!--		<dependency>-->
<!--			<groupId>io.socket</groupId>-->
<!--			<artifactId>engine.io-server-jetty</artifactId>-->
<!--			<version>6.2.1</version>-->
<!--		</dependency>-->



	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
